k8s解决方案基本完美实现，特此更新

--- a/plutochan/my.cnf
+++ b/plutochan/my.cnf
@@ -1,5 +1,5 @@
 [client]
-database = pluto
-user = plutochan
-password = 'MZ#fDNfp^rK`@un&jZjC5'
+database = django32
+user = django32
+password = 'trwZiqMERQnoNDCThox4'
 default-character-set = utf8
